--- a/public/css/hour-chart.css
+++ b/public/css/hour-chart.css
@@ -21,8 +21,8 @@
 }
 
 .hour-chart{
-    height: 300px;
-    width: 90%;
+    height:300px;
+    width:80%;
 }
 
 .reservation{
