--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -7,7 +7,7 @@
     }
 
     .inner-tile-size{
-        width:33%;
+        width:40%;
         padding-bottom: 10px;
         padding-left: 10px;
     }
@@ -18,7 +18,7 @@
     }
 
     .tile-navigation-position{
-        margin-left: 28%;
+        margin-left: 34%;
     }
 
     .tile-navigation > li{
@@ -63,7 +63,7 @@
 
 @media only screen and (max-width: 800px) {
     .tile-size{
-        width: 95%;
+        width: 90%;
         margin-bottom: 10px;
     }
 
@@ -84,7 +84,7 @@
     }
 
     .tile-navigation-position{
-        margin-left: 77%;
+        margin-left: 70%;
     }
 
     .tiles{
